--- a/.config/i3/config
+++ b/.config/i3/config
@@ -96,6 +96,8 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
+bindsym Mod1+Tab workspace next
+bindsym Mod1+Shift+Tab workspace next
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1:-urxvt
